# BitEOS

./: .gitignore  .gitmodules  BP_Instructions.md  CMakeLists.txt  README.md  bes.doxygen.in  besio.version.in  besio_build.sh  besio_install.sh  besio_uninstall.sh  mainnet-genesis.json  testnet.md  testnet.template
.buildkite/: coverage.yml  debug.yml  long_running_tests.yml  pipeline.yml
CMakeModules/: BesioTester.cmake.in  EosioTesterBuild.cmake.in  FindWasm.cmake  MASSigning.cmake  additionalPlugins.cmake  doxygen.cmake  installer.cmake  wasm.cmake
Docker/: Dockerfile  README.md  clbes.sh  config.ini  docker-compose-besio1.0.yaml  docker-compose-latest.yml  docker-compose.yml  nodbesd.sh
Docker/builder/: Dockerfile
Docker/dev/: Dockerfile
contracts/: CMakeLists.txt
contracts/System/: CMakeLists.txt  README.md  System.cpp  System.hpp
contracts/asserter/: CMakeLists.txt  asserter.abi  asserter.cpp  asserter.hpp
contracts/bancor/: CMakeLists.txt  bancor.cpp  bancor.hpp  converter.hpp
contracts/besio.bios/: CMakeLists.txt  besio.bios.abi  besio.bios.cpp  besio.bios.hpp
contracts/besio.msig/: CMakeLists.txt  README.md  besio.msig.abi  besio.msig.cpp  besio.msig.hpp
contracts/besio.platform/: CMakeLists.txt  README.md  besio.platform.abi  besio.platform.cpp  besio.platform.hpp  delegate_bandwidth.cpp  exchange_state.cpp  exchange_state.hpp  native.hpp  producer_pay.cpp  voting.cpp
contracts/besio.sudo/: CMakeLists.txt  README.md  besio.sudo.abi  besio.sudo.cpp  besio.sudo.hpp
contracts/besio.system/: CMakeLists.txt  README.md  besio.system-buyrambytes-rc.md  besio.system-clause-constitution-rc.md  besio.system-regproducer-rc.md  besio.system.abi  besio.system.cpp  besio.system.hpp  delegate_bandwidth.cpp  exchange_state.cpp  exchange_state.hpp  native.hpp  producer_pay.cpp  voting.cpp
contracts/besio.token/: CMakeLists.txt  besio.token.abi  besio.token.cpp  besio.token.hpp
contracts/besiolib/: CMakeLists.txt  action.h  action.hpp  asset.hpp  besio.hpp  besiolib.cpp  chain.h  compiler_builtins.h  contract.hpp  contracts.dox  contracts_build_config.hpp  contracts_build_config.hpp.in  core_symbol.hpp  core_symbol.hpp.in  crypto.h  currency.hpp  datastream.hpp  db.h  dispatcher.hpp  fixed_key.hpp  fixedpoint.hpp  globalconfig.hpp  globalconfig.hpp.in  mainpage.md  memory.h  memory.hpp  multi_index.hpp  optional.hpp  (+21 more)
debian/: postinst
libraries/testing/: CMakeLists.txt  tester.cpp  tester_network.cpp
libraries/testing/include/besio/testing/: chainbase_fixture.hpp  tester.hpp  tester_network.hpp
libraries/utilities/: CMakeLists.txt  git_revision.cpp.in  key_conversion.cpp  string_escape.cpp  tempdir.cpp  words.cpp
libraries/utilities/include/besio/utilities/: common.hpp  git_revision.hpp  key_conversion.hpp  padding_ostream.hpp  parallel_markers.hpp  rand.hpp  string_escape.hpp  tempdir.hpp  words.hpp
plugins/: besio-make_new_plugin.sh
plugins/account_history_plugin/: CMakeLists.txt  account_history_plugin.cpp
plugins/account_history_plugin/include/besio/account_history_plugin/: account_transaction_history_object.hpp  transaction_history_object.hpp
programs/: CMakeLists.txt
programs/kbesd/: CMakeLists.txt  main.cpp
scripts/: CMakeLists.txt  abigen.sh  besio-tn_bounce.sh  besio-tn_down.sh  besio-tn_roll.sh  besio-tn_up.sh  besio_build_amazon.sh  besio_build_centos.sh  besio_build_darwin.sh  besio_build_fedora.sh  besio_build_ubuntu.sh  clean_old_install.sh
tests/: CMakeLists.txt  Cluster.py  Node.py  TestHelper.py  WalletMgr.py  consensus-validation-malicious-producers.py  distributed-transactions-remote-test.py  distributed-transactions-test.py  impaired_network.py  lossy_network.py  nodbes_run_remote_test.py  nodbes_run_test.py  nodbes_under_min_avail_ram.py  nodbes_voting_test.py  p2p_network_test.py  p2p_stress.py  p2p_test_peers.py  restart-scenarios-test.py  testUtils.py  trans_sync_across_mixed_cluster_test.sh  validate-dirty-db.py  wallet_tests.cpp
tools/: CMakeLists.txt  besiocpp.in  print_floats.cpp
unittests/: CMakeLists.txt  abi_tests.cpp  api_tests.cpp  auth_tests.cpp  besio.sudo_tests.cpp  besio.system_tests.cpp  besio.token_tests.cpp  besio_system_tester.hpp  block_tests.cpp  block_timestamp_tests.cpp  bootseq_tests.cpp  currency_tests.cpp  database_tests.cpp  delay_tests.cpp  dice_tests.cpp  exchange_tests.cpp  forked_tests.cpp  identity_tests.cpp  main.cpp  message_buffer_tests.cpp  misc_tests.cpp  multi_index_tests.cpp  multisig_tests.cpp  payloadless_tests.cpp  producer_schedule_tests.cpp  ram_tests.cpp  resource_limits_test.cpp  special_accounts_tests.cpp  tic_tac_toe_tests.cpp  wasm_tests.cpp  whitelist_blacklist_tests.cpp
(+353 files in other folders)
